--- a/public/css/default.css
+++ b/public/css/default.css
@@ -641,7 +641,7 @@ input[type="checkbox"] { display: inline; }
 .row .nine        { width: 75%; }
 .row .ten         { width: 83.33333%; }
 .row .eleven      { width: 91.66667%; }
-.row .three      { width: 100%; }
+.row .twelve      { width: 100%; }
 
 /* Offsets */
 .row .offset-1    { margin-left: 8.33333%; }
