--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -407,7 +407,7 @@ ul#nav li.current a { color: #F06000; }
 /* ------------------------------------------------------------------ */
 
 #portfolio {
-   background: #ebeeee;
+   background: #075478;
    padding-top: 90px;
    padding-bottom: 60px;
 }
@@ -423,7 +423,7 @@ ul#nav li.current a { color: #F06000; }
 /* Portfolio Content */
 #portfolio-wrapper .columns { margin-bottom: 36px; }
 .portfolio-item .item-wrap {
-   background: #fff;
+   background: rgb(255, 255, 255);
    overflow: hidden;
    position: relative;
 
@@ -457,7 +457,7 @@ ul#nav li.current a { color: #F06000; }
 
    background: url(../images/overlay-bg.png) repeat;
 }
-.portfolio-item .item-wrap .link-icon {
+.portfolio-item .item-wrap .icon-link {
    display: block;
    color: #fff;
    height: 30px;
@@ -482,14 +482,18 @@ ul#nav li.current a { color: #F06000; }
    margin-top: -15px;
 }
 .portfolio-item .item-wrap img {
+   width: 300px;
+   height: 200px;
+   object-fit: cover;
    vertical-align: bottom;
+   
 }
-.portfolio-item .portfolio-item-meta { padding: 18px }
-.portfolio-item .portfolio-item-meta h5 {
+.portfolio-item .portfolio-name { padding: 18px }
+.portfolio-item .portfolio-name h5 {
    font: 14px/21px 'opensans-bold', sans-serif;
    color: #fff;
 }
-.portfolio-item .portfolio-item-meta p {
+.portfolio-item .portfolio-name p {
    font: 12px/18px 'opensans-light', sans-serif;
    color: #c6c7c7;
    margin-bottom: 0;
@@ -501,31 +505,31 @@ ul#nav li.current a { color: #F06000; }
 	-moz-opacity: 1;
 	filter:alpha(opacity=100);
 }
-.portfolio-item:hover .link-icon {
+.portfolio-item:hover .icon-link {
    opacity: 1;
 	-moz-opacity: 1;
 	filter:alpha(opacity=100);
 }
 
 /* popup modal */
-.popup-modal {
+.open-modal {
 	max-width: 550px;
-	background: #fff;
+	background: #ffffff;
 	position: relative;
 	margin: 0 auto;
 }
-.popup-modal .description-box { padding: 12px 36px 18px 36px; }
-.popup-modal .description-box h4 {
+.open-modal .description-box { padding: 12px 36px 18px 36px; }
+.open-modal .description-box h4 {
    font: 15px/24px 'opensans-bold', sans-serif;
 	margin-bottom: 12px;
    color: #111;
 }
-.popup-modal .description-box p {
+.open-modal .description-box p {
 	font: 14px/24px 'opensans-regular', sans-serif;
    color: #A1A1A1;
    margin-bottom: 12px;
 }
-.popup-modal .description-box .categories {
+.open-modal .description-box .categories {
    font: 11px/21px 'opensans-light', sans-serif;
    color: #A1A1A1;
    text-transform: uppercase;
@@ -533,30 +537,30 @@ ul#nav li.current a { color: #F06000; }
    display: block;
    text-align: left;
 }
-.popup-modal .description-box .categories i {
+.open-modal .description-box .categories i {
    margin-right: 8px;
 }
-.popup-modal .link-box {
+.open-modal .linked-proj {
    padding: 18px 36px;
    background: #111;
    text-align: left;
 }
-.popup-modal .link-box a {
+.open-modal .linked-proj a {
    color: #fff;
 	font: 11px/21px 'opensans-bold', sans-serif;
 	text-transform: uppercase;
    letter-spacing: 3px;
    cursor: pointer;
 }
-.popup-modal a:hover {	color: #00CCCC; }
-.popup-modal a.popup-modal-dismiss { margin-left: 24px; }
+.open-modal a:hover {	color: #00CCCC; }
+.open-modal a.open-modal-dismiss { margin-left: 24px; }
 
 
 /* fadein/fadeout effect for modal popup
 /* ------------------------------------------------------------------ */
 
 /* content at start */
-.mfp-fade.mfp-wrap .mfp-content .popup-modal {
+.mfp-fade.mfp-wrap .mfp-content .open-modal {
    opacity: 0;
    -webkit-transition: all 200ms ease-in-out;
 	-moz-transition: all 200ms ease-in-out;
@@ -565,11 +569,11 @@ ul#nav li.current a { color: #F06000; }
    transition: all 200ms ease-in-out;
 }
 /* content fadein */
-.mfp-fade.mfp-wrap.mfp-ready .mfp-content .popup-modal {
+.mfp-fade.mfp-wrap.mfp-ready .mfp-content .open-modal {
    opacity: 1;
 }
 /* content fadeout */
-.mfp-fade.mfp-wrap.mfp-removing .mfp-content .popup-modal {
+.mfp-fade.mfp-wrap.mfp-removing .mfp-content .open-modal {
    opacity: 0;
 }
 
