--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -201,6 +201,9 @@ ul#nav li.current a { color: #F06000; }
    line-height: 30px;
    color: #7A7A7A;
 }
+#about p span {
+   color: #fff;
+}
 #about .profile-pic {
    position: relative;
    width: 300px;
@@ -906,7 +909,7 @@ call-to-action .button {
 }
 
 
-/* Twitter Feed */
+/* Twitter Feed
 #twitter {
    margin-top: 12px;
    padding: 0;
@@ -922,7 +925,7 @@ call-to-action .button {
    font: 13px/36px 'opensans-regular', Sans-serif;
    color: #474747 !important;
    border: none;
-}
+} */
 
 
 /* ------------------------------------------------------------------ */
